checking basic html layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     </head>
     <body>
         <h1>Hello World!</h1>
-        <script src ="script.js"></script>
+        <div>
+            <h2>Background</h2>
+                <p>something to check</p>
+        </div>
+        <div>
+            <h2>Interests</h2>
+                <p>something about hobbies</p>
+        </div>
+        <div>
+            <h2>carreer lifestyle</h2>
+                <p>types of jobs and why</p>
+        </div>
+        <div>
+            <h2>Future</h2>
+                <p>moving forward and why the change</p>
+        </div>
+        <script src = "script.js"></script>
     </body>
 </html>
