linking an img to the html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Kevin Diesenberg</h1>
+            <img src="kevins-MBP/Desktop/plane-window.jpg"
+                alt="Looking out of a skydive jump plane"/>
         <div>
             <h2>Background</h2>
                 <p>something to check</p>
@@ -22,6 +24,9 @@
             <h2>Future</h2>
                 <p>moving forward and why the change</p>
         </div>
+        <footer>
+
+        </footer>
         <script src = "script.js"></script>
     </body>
 </html>
