fixing a couple typos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Kevin Diesenberg</h1>
             <img src="kevins-MBP/Desktop/plane-window.jpg"
                 alt="Looking out of a skydive jump plane"/>
+                /*i need to add an image to the vscode file final website.  having a hard time because of mac*/
         <div>
             <h2>Background</h2>
                 <p>something to check</p>
@@ -17,7 +18,7 @@
                 <p>something about hobbies</p>
         </div>
         <div>
-            <h2>carreer lifestyle</h2>
+            <h2>career lifestyle</h2>
                 <p>types of jobs and why</p>
         </div>
         <div>
