--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1>Kevin Diesenberg</h1>
-            <img src="/Users/kevindiesenberg/Desktop/plane-window.jpg"
-                alt="Looking out of a skydive jump plane"/>
+        <img src="/Users/kevindiesenberg/Desktop/plane-window.jpg"
+        alt="Looking out of a skydive jump plane"/>
+        <h1>Kevin Robert Diesenberg</h1>
         <div>
             <h2>Background</h2>
                 <p>something to check</p>
