--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
                 alt="Looking out of a skydive jump plane"/>
             <h1>Kevin Robert Diesenberg</h1>
         <div>
-            <h2>Career Background</h2>
+            <h2 id="careerBackground"><button>Career Background</button></h2>
                 <p>I worked in restaurants from about 15 years old until I was 25 years old.  I started washing dishes and worked my way up to cooking and eventually landed at being a server. Although I had a great time at these jobs and excelled, it just didn’t stimulate me enough. I was introduced to stagehand work through a friend and I made the transition to being a full time stagehand. Stagehands handle setting up productions like concerts, theatrical plays and conventions.  This job would keep me excited about work and play into my skill sets. With stagehand work I was able to take time away from work whenever I wanted to yet always be able to return. The job paid extremely well and I was able to travel extensively for work and also for leisure.   I took 6 months off of stagehand work to take an entry level water treatment job with the National Park Service.  Water treatment was extremely interesting to me and I went through courses to become state licensed to further my reach and understanding. I would spend 6 months doing stagehand work and 6 months working with the park service.  Throughout this time I managed to buy and renovate a couple houses myself and get some passive income flowing through rentals. </p>
         </div>
         <div>
-            <h2>Hobbies</h2>
+            <h2 id="hobbies"><button>Hobbies</button></h2>
                 <ul>
                     <li>Skydiving</li>
                     <li>Paramotoring</li>
@@ -26,11 +26,11 @@
 
         </div>
         <div>
-            <h2>career lifestyle</h2>
+            <h2 id="careerFocus">Career Focus</h2>
                 <p>types of jobs and why</p>
         </div>
         <div>
-            <h2>Future</h2>
+            <h2 id="future"><button>Future</button></h2>
                 <p>moving forward and why the change</p>
         </div>
         <footer>
