playing with css values.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
         <title>Human #Kevin Diesenberg</title>
     </head>
     <body>
+        <div>
             <img id="skydive"
-                src="/Users/kevindiesenberg/Desktop/plane-window.jpg"
-                alt="Skydive Plane Door"/>
+                src="/Users/kevindiesenberg/Desktop/kevandarti.jpeg"
+                alt="Skydive Plane Door"
+            />
+        </div>
+
+        <div>
             <h1>Kevin Robert Diesenberg</h1>
+        </div>
 
         <div>
             <h2><button id="careerBackground">Career Background</button></h2>
