change img id alt in html, js

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <div>
-            <img id="skydive"
+            <img id="kevandarti"
                 src="/Users/kevindiesenberg/Desktop/kevandarti.jpeg"
-                alt="Skydive Plane Door"
+                alt="Kevin and Artichoke"
             />
         </div>
 
