--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             />
         </div>
 
-        <div>
+        <div class="name">
             <h1>Kevin Robert Diesenberg</h1>
         </div>
 
