skills and future content added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel = "stylesheet" href = "style.css" />
+        <link rel="stylesheet" href="style.css"/>
         <title>Human #Kevin Diesenberg</title>
     </head>
     <body>
@@ -26,7 +26,14 @@
         <div>
             <h2><button id="careerSkills">Career Skills</button></h2>
                 <div class="careerSkills">
-                    <p>types of jobs and why</p>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>React</li>
+                        <li>Water Treatment</li>
+                        <li>Stagehand and Arena Rigging</li>
+                    </ul>
                 </div>
         </div>
 
@@ -53,4 +60,5 @@
 
         <script src = "script.js"></script>
     </body>
+
 </html>
