button and img box shadows

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>Human #Kevin Diesenberg</title>
     </head>
     <body>
+        <div class="name">
+            <h1>Kevin Robert Diesenberg</h1>
+        </div>
+
         <div>
             <img id="kevandarti"
                 src="/Users/kevindiesenberg/Desktop/kevandarti.jpeg"
@@ -12,8 +16,8 @@
             />
         </div>
 
-        <div class="name">
-            <h1>Kevin Robert Diesenberg</h1>
+        <div class="blank">
+            <h1></h1>
         </div>
 
         <div>
@@ -40,7 +44,7 @@
         <div>
             <h2><button id="future">Future</button></h2>
                 <div class="future">
-                    <p>moving forward and why the change</p>
+                    <p>My pursuit into software engineering is fueled by a desire for clean functioning apps. I am interested in AI and Robotics and will continue to study and learn those fields.</p>
                 </div>
         </div>
 
