adding social in html and css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Human #Kevin Diesenberg</title>
     </head>
     <body>
@@ -17,7 +18,8 @@
         </div>
 
         <div class="blank">
-            <h1></h1>
+            <h1>
+            </h1>
         </div>
 
         <div>
@@ -60,6 +62,20 @@
                         <li>Traveling</li>
                     </ul>
                 </div>
+        </div>
+
+        <div class="social">
+
+                <a href="https://www.facebook.com/kevin.diesenberg/" class="fa fa-facebook"></a>
+
+                <a href="https://github.com/kevdies" class="fa fa-github"></a>
+
+                <a href="www.linkedin.com/in/kevin-diesenberg-426012253" class="fa fa-linkedin"></a>
+
+                <a href="https://www.instagram.com/kevdies/" class="fa fa-instagram"></a>
+
+                <a href="https://twitter.com/KevinDiesenberg" class="fa fa-twitter"></a>
+
         </div>
 
         <script src = "script.js"></script>
